improve flags and directory write access

--- a/ch_helper_config.json
+++ b/ch_helper_config.json
@@ -129,6 +129,7 @@
     "/Volumes/Crucial X8/Clone Hero Extra/Songs/Rock Band 3 DLC/Queensryche - Silent Lucidity/album.png",
     "/Volumes/Crucial X8/Clone Hero Extra/Songs/Rock Band 3 DLC/Sum 41 - Still Waiting/album.png",
     "/Volumes/Crucial X8/Clone Hero Extra/Songs/Rock Band Blitz/Maroon 5 ft. Christina Aguilera - Moves Like Jagger/album.png",
-    "/Volumes/Crucial X8/Clone Hero Extra/Songs/Rock Band Blitz/Quiet Riot - Bang Your Head (Metal Health)/album.png"
+    "/Volumes/Crucial X8/Clone Hero Extra/Songs/Rock Band Blitz/Quiet Riot - Bang Your Head (Metal Health)/album.png",
+    "/Users/sammcdonald/Clone Hero/Songs/Rock Band 3/Golden Earring - Radar Love/album.png"
   ]
 }
